# mlb-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  ARCHITECTURE.md  DECISIONS.md  PREFLIGHT.md  PROJECT_SPEC.md  README.md  pyproject.toml  run.py
.github/workflows/: nightly.yml
dashboard/: build_site.py  live_sim.py  ops.py  prepare_dashboard_data.py  season_sim.py
data/results/: metrics.json
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: generate_schema_name.sql
dbt/models/gold/: _gold.yml  dim_player.sql  dim_team.sql  fct_game.sql  fct_plate_appearance.sql  fct_team_game.sql  gold_batted_balls.sql  (+13 more)
dbt/tests/: assert_re24_anchors.sql  assert_statcast_covers_boxscore.sql  assert_team_placeholder_under_threshold.sql
docs/: betting.html  compare.html  data-eng.html  data-science.html  fan.html  glossary.html  index.html  live.html  models.html  ops.html  simulator.html
docs/assets/: site.css  teams.js  util.js
docs/data/: incidents.json  last_run.txt  runs.json  spc_limits.json
ingest/: _common.py  _dlq.py  export_feeds.py  land.py  pull_chadwick.py  pull_draft.py  pull_odds.py  pull_people.py  pull_savant.py  pull_statsapi.py
models_py/: b1_pythagoras.py  b2_count_value.py  b3_aging.py  b4_markov_sim.py  b5_streaks.py  game_model.py  m1_stability.py  m2_xwoba.py  m4_framing.py  m5_k_poisson.py  m6_arsenal.py  m7_babip_shrinkage.py  m8_draft.py
models_r/: b1_pythagoras.R  b2_count_value.R  b3_aging.R  b4_markov_sim.R  b5_streaks.R  game_model.R  m1_stability.R  m2_xwoba.R  m4_framing.R  m5_k_poisson.R  m6_arsenal.R  m7_babip_shrinkage.R  m8_draft.R
parity/: load_results.py
pipeline/: __init__.py  defs.py  stages.py
reference/: team_divisions.csv
scripts/: install_r_packages.R
(+11 files in other folders)
